--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,18 @@
     <string name="lbl_welcome">Welcome!</string>
     <string name="lbl_get_started">Get Started</string>
     <string name="lbl_hello_welcome_to_galaxy_app">Hello! Welcome to Galaxy App</string>
+    <string name="lbl_welcome_back_login_to_continue">Welcome back, Login to continue</string>
+
+    
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="lbl_email">Email</string>
+    <string name="lbl_password">Password</string>
+    <string name="lbl_forgot_password">Forgot Password ?</string>
+    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
+    <string name="lbl_sign_up_with_facebook">Sign up with facebook</string>
+    <string name="lbl_sign_in_with_google">Sign in with google</string>
+    <string name="lbl_sign_up_with_google">Sign up with google</string>
+    <string name="lbl_confirm">Confirm</string>
+    <string name="lbl_already_account">Already account ?</string>
+    <string name="lbl_register">Register</string>
 </resources>
