--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="lbl_plot_summary">Plot Summary</string>
     <string name="lbl_cast">Cast</string>
     <string name="lbl_get_your_ticket">Get your ticket</string>
+    <string name="lbl_next">Next</string>
 </resources>
