--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="lbl_cast">Cast</string>
     <string name="lbl_get_your_ticket">Get your ticket</string>
     <string name="lbl_next">Next</string>
+    <string name="lbl_payment_method">Payment Method</string>
 </resources>
